--- a/main.css
+++ b/main.css
@@ -1,3 +1,62 @@
-.hej {
-    color: black;
+/* ------------------- fonts and text style */
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.roboto {
+    font-family: 'Roboto', sans-serif;
 }
+.apple {
+    font-family: 'Homemade Apple', sans-serif;
+}
+/* ------------------- header */
+
+/* ------------------- body */
+.hero-1 {
+    height: 100vh;
+    width: 100%;
+    background-image: url('img/green.jpg');
+}
+
+.hero-1-text {
+    padding-top: 200px;
+}
+
+.slide-left {
+  width:100%;
+  overflow:hidden;
+}
+.slide-left h1 {
+  animation: slide-left 2s;
+  margin-left: 20%;
+}
+
+.slide-right h3 {
+    animation: slide-right 2s;
+    margin-left: 20%;
+  }
+
+@keyframes slide-left {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 20%;
+    width: 100%;
+  }
+}
+
+@keyframes slide-right {
+    from {
+      margin-left: -100%;
+      width: 300%; 
+    }
+  
+    to {
+      margin-left: 20%;
+      width: 100%;
+    }
+  }
+
+/* ------------------- footer */
