--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@
     height: 100vh;
     width: 100%;
     background-image: url('img/green.jpg');
+    background-attachment: fixed;
 }
 
 .hero-1-text {
@@ -69,6 +70,17 @@
 
 .about-text {
     line-height: 1.8;
+}
+
+.about-col {
+  padding: 20px;
+}
+
+.josefine-img {
+  width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* ------------------- footer */
