--- a/main.css
+++ b/main.css
@@ -9,11 +9,6 @@
     font-family: 'Homemade Apple', sans-serif, 'Font Awesome 5 Brands', 'Font Awesome 5 Free', 'Font Awesome 5 Free Solid';
 }
 
-.letter-spacing {
-  letter-spacing: 2px;
-}
-
-
 /* ------------------- header */
 
 /* ------------------- body */
@@ -43,7 +38,7 @@
 
 /* ------------------- hero image section */
 .line-1{
-  border-right: .15em solid orange;
+  border-right: .15em solid grey;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -56,7 +51,7 @@
   to{width: 15.3em;}
 }
 @keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
+  from{border-right-color: orange;}
   to{border-right-color: transparent;}
 }
 
@@ -70,6 +65,10 @@
 .hero-1-text {
     padding-top: 50vh;
     padding-left: 150px;
+}
+
+.josefine-text {
+  color: orange !important;
 }
 
 /* ------------------- about section */
@@ -129,7 +128,7 @@
 /* ------------------- icons */
 
 .contact-col i {
-  color: black;
+  color: orange;
   background: white;
   padding:30px;
   border-radius: 50%;
@@ -145,14 +144,14 @@
 
 .contact-col i:hover {
   color: white;
-  background: rgb(98, 107, 89);
+  background: orange;
 }
 
 /* ------------------- footer */
 
 .footer {
-  background-color: rgb(98, 107, 89) !important;
-  color: white !important;
+  background: rgb(98,107,89) !important;
+  color: white;
 }
 
 
