--- a/main.css
+++ b/main.css
@@ -212,6 +212,17 @@ ul.timeline > li:before {
 
 
 /* ------------------- media screen */
+
+@media (max-width: 992px) {
+  .work-col {
+    margin-bottom: 0px !important;
+  }
+
+  .skills-col {
+    margin-bottom: 0px !important;
+  }
+}
+
 @media (min-width: 600px) {
   .josefine-text {
     font-size: 50px;
