--- a/main.css
+++ b/main.css
@@ -200,14 +200,21 @@
 }
 
 .about-col {
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 60px;
 }
 
 .josefine-img {
-  width: 380px;
-  display: block;
   margin-left: auto;
   margin-right: auto;
+  opacity: 1;
+  display: block;
+  width: 380px;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .work-col {
@@ -238,6 +245,41 @@
 
 .zoom:hover {
   transform: scale(1.1);
+}
+
+.about-container:hover .josefine-img {
+  opacity: 0.7;
+}
+
+.about-container:hover .middle {
+  opacity: 1;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text {
+  background-color: orange;
+  border-radius: 10px;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.text a:link {
+  color: white;
+}
+
+.text a:hover {
+  text-decoration: none;
 }
 
 /* ------------------- technical skills section */
